# goit-pythonweb-hw-10

./: .env  .env.dev  .gitignore  README.md  alembic.ini  docker-compose.yaml  dockerfile  pyproject.toml
src/: main.py  run.py
src/api/: auth.py  contacts.py  exceptions.py  users.py  utils.py
src/conf/: config.py
src/db/: configurations.py  models.py
src/db/alembic/: env.py
src/db/alembic/versions/: 1e185a0eeb90_add_contacts_model.py  24dcade61ad3_update_user_model.py  3152088eefa6_update_userschema_with_validations.py  43d081295d48_add_users_model_to_db.py  5ce7cedf970b_updated_with_mapped_columns_the_users_.py  625c4f236cb3_add_contacts_model_2.py  708f486b4dd7_make_async_revision.py  77d07e41d971_updated_user_add_notes_and_tags_models.py  8d1596c71939_init.py  99ed05ba5699_add_contacts_model.py  bd599813eed5_add_a_avatar_field_for_user_schema.py  eddd34793272_add_is_verified_on_user_table.py  ff3b9c490625_add_contacts_model_3.py
src/repository/: auth.py  contacts.py  users.py
src/schemas/: auth.py  contacts.py  users.py
src/services/: auth.py  contacts.py  email.py  users.py
src/templates/: email_verification.html
